# leti-asd-sao-2017

./: CMakeLists.txt  Logger.cpp  Logger.h  README.md  Report_2.fodt  Sets.cpp  Sets.h  main.cpp
Tests/: CMakeLists.txt  README.md  Tests.cpp
